# SlicerScapulaMorphology

./: README.md
ScapulaMorphology/: ScapulaMorphology.py
SlicerScapularMorphology/: CMakeLists.txt  README.md
SlicerScapularMorphology/ScapulaMorphology/: CMakeLists.txt
